kuard/kuard.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - portal.halfdozenshots.com
    secretName: portal-tls
  rules:
  - host: portal.halfdozenshots.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
